# knob

./: .clang-tidy  .env.template  .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  PLAN.md  README.md  SKILLS.md  build.rs  flash.sh  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.defaults.local.template  stations.json  test.sh
.cargo/: config.toml
.claude/skills/cpp-best-practices/: SKILL.md
.claude/skills/display-driver/: SKILL.md
.claude/skills/esp-idf-build/: SKILL.md
.claude/skills/sonos-protocol/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: build.yml  pages.yml
apps/calendar/: CMakeLists.txt  sdkconfig.defaults.local.template
apps/calendar/main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  cal_fetch.cpp  cal_fetch.h  ical_parser.cpp  ical_parser.h  main.cpp  weather.cpp
apps/calendar/main/fonts/: geist_medium_28.c  geist_medium_52.c
apps/calendar/main/ui/: ui.cpp  ui.h
apps/calendar/scripts/: peek_events.py
apps/radio/: CMakeLists.txt  flash.sh  stations.json
apps/radio/main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  idf_component.yml  main.cpp  weather.cpp  weather.h
apps/radio/main/fonts/: geist_regular_20.c  lucide_weather_20.c
apps/radio/main/ui/: ui.cpp  ui.h  ui_timer.cpp  ui_timer.h  ui_voice.cpp  ui_voice.h
apps/radio/main/ui/images/: images.h  nrk_mp3.c  nrk_nyheter.c  nrk_p1.c  nrk_p3.c  p4.c  p5.c
apps/radio/main/voice/: tools_radio.cpp
apps/spotify/: CMakeLists.txt  README.md  SPEC.md  sdkconfig.defaults  sdkconfig.defaults.local.template
apps/spotify/main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  main.cpp  spotify_setup.cpp  spotify_setup.h  wifi_picker.cpp  wifi_picker.h  wifi_setup.cpp  wifi_setup.h
apps/spotify/main/fonts/: geist_regular_16.c
apps/spotify/main/spotify/: json_parse.cpp  json_parse.h  spotify_api.cpp  spotify_api.h  spotify_auth.cpp  spotify_auth.h
apps/spotify/main/ui/: ui.cpp  ui.h
apps/spotify/main/ui/images/: images.h  spotify_logo_32.c  spotify_logo_64.c
apps/spotify/scripts/: get_token.py
apps/template/: CMakeLists.txt  sdkconfig.defaults.local.template
apps/template/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
components/knob_hal/: CMakeLists.txt  idf_component.yml
components/knob_hal/include/: hal_pins.h  haptic.h
components/knob_hal/src/: display_idf.cpp  encoder.cpp  haptic.cpp
components/knob_net/: CMakeLists.txt
components/knob_net/include/: knob_events.h
components/knob_net/src/: wifi_manager.cpp
components/knob_sonos/: CMakeLists.txt
components/knob_sonos/include/: discovery.h  sonos.h  sonos_config.h
components/knob_sonos/src/: discovery.cpp  sonos.cpp
components/knob_storage/: CMakeLists.txt
components/knob_storage/include/: settings.h
components/knob_storage/src/: settings.cpp
components/knob_timer/: CMakeLists.txt
components/knob_timer/include/: timer.h  timer_events.h
components/knob_timer/src/: timer.cpp
components/knob_ui/: CMakeLists.txt  idf_component.yml
components/knob_ui/include/: fonts.h  ui_pages.h
components/knob_ui/src/: lucide_22.c  ui_pages.cpp
components/knob_ui/src/tjpgd/: tjpgd.c
components/knob_voice/: CMakeLists.txt  idf_component.yml
components/knob_voice/include/: voice_config.h
components/knob_voice/src/: voice_protocol.cpp  voice_session.cpp  voice_task.cpp  voice_tools.cpp
components/radio_input/: CMakeLists.txt  encoder.cpp  haptic.cpp
components/radio_input/include/: encoder.h
components/radio_input/include/ui/: display.h
components/radio_net/: CMakeLists.txt  discovery.cpp  wifi_manager.cpp
components/radio_net/include/: app_config.h  sonos.h  wifi_manager.h
components/radio_ui/: CMakeLists.txt  app_events.cpp  display_idf.cpp  geist_medium_24.c  geist_mono_medium_48.c  geist_regular_14.c  geist_regular_16.c  geist_regular_20.c  idf_component.yml  ui.cpp  ui_bridge.cpp  ui_pages.cpp  ui_timer.cpp  ui_voice.cpp
components/radio_ui/include/: app_config.h  app_events.h  display.h  fonts.h  ui_bridge.h
components/radio_ui/include/input/: haptic.h
components/radio_ui/include/sonos/: discovery.h  sonos.h
components/radio_ui/include/storage/: settings.h
components/radio_ui/include/voice/: voice_session.h
docs/: architecture.md  hardware.md  setup.md  sonos-upnp.md  voice-mode-plan.md
docs/callback/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  idf_component.yml  main.cpp
main/fonts/: geist_medium_24.c  geist_medium_28.c  geist_medium_52.c  geist_mono_medium_48.c  geist_regular_18.c  geist_regular_20.c  geist_regular_22.c
main/input/: encoder.cpp  encoder.h
main/net/: wifi_manager.cpp
main/sonos/: discovery.cpp  discovery.h  sonos.cpp  sonos.h
main/storage/: settings.cpp  settings.h
main/timer/: timer.cpp
main/ui/: art_decoder.cpp  art_decoder.h  display.h  display_idf.cpp  squircle.cpp  squircle.h  ui.cpp  ui.h  ui_timer.cpp  ui_voice.cpp
main/ui/images/: nrj.c  nrk_jazz.c  nrk_mp3.c  nrk_nyheter.c  nrk_p1.c  nrk_p2.c  nrk_p3.c  p4.c  p5.c  p9.c  radio_norge.c  radio_rock.c
main/ui/tjpgd/: tjpgd.h  tjpgdcnf.h
main/voice/: tools_radio.cpp  voice_audio.cpp  voice_audio.h  voice_mic.cpp  voice_mic.h  voice_protocol.h  voice_session.cpp  voice_task.cpp  voice_task.h  voice_tools.cpp  voice_tools.h
scripts/: LVGLImage.py  convert_images.sh  gen_stations.ts  lint.sh
sim/: CMakeLists.txt  display_sdl.cpp  lv_conf.h  sim_main.cpp
sim/shims/: esp_event.h  esp_log.h
sim/shims/input/: haptic.h
sim/shims/sonos/: discovery.h  sonos.h
sim/shims/storage/: settings.h
skills/: building.md  hardware.md  sonos.md  ui.md  voice.md
src/: main.rs
src/bridge/: events.rs  mod.rs  net.rs  ui.rs
src/storage/: mod.rs
src/timer/: mod.rs
src/voice/: audio.rs  mod.rs  protocol.rs  session.rs  websocket.rs
src/voice/tools/: mod.rs  radio.rs  timer.rs
